responsive and icons added

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Mr. Fox</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
@@ -10,43 +11,45 @@
       <section class="body-container">
         <section class="boxes-container">
           <div class="box div1">
-              <h1 class="title">BRADLEY COOPER</h1>
-              <p class="bio" >I'm a Graphic Designer, Coder & Entrepreneur. Take a look at my
-              portfolio to see what I've been working on.</p>
-              <div class="icon icon1"></div>
+              <h1 class="title">MR. FOX</h1>
+              <p class="bio" >Just fox trottin' through life like it ain't no thang.
+              Here's a little about me!</p>
+              <div class="button-container">
+                <button class="about"><img class="info" src="assets/info.svg" alt="">ABOUT</button>
+                <button><img class="contact" src="assets/contact.svg" alt="">CONTACT</button>
+              </div>
           </div>
           <div class="box div2">
             <div class="icon icon1"></div>
-            <p>HELLO!</p>
+            <p>PROFILE</p>
           </div>
           <div class="box div3">
             <div class="icon icon2"></div>
-            <p>HELLO!</p>
+            <p>FAMILY</p>
           </div>
           <div class="box div4">
             <div class="icon icon3"></div>
-            <p>HELLO!</p>
+            <p>FAVE ACTIVITIES</p>
           </div>
           <div class="box div5">
             <div class="icon icon4"></div>
-            <p>HELLO!</p>
+            <p>DISLIKES</p>
           </div>
           <div class="box div6">
             <div class="icon icon5"></div>
-            <p>HELLO!</p>
+            <p>FAVE SNACKS</p>
           </div>
           <div class="box div7">
             <div class="icon icon6"></div>
-            <p>HELLO!</p>
+            <p>FAVE NETFLIX SHOWS</p>
           </div>
           <div class="box div8">
             <div class="icon icon7"></div>
-            <p>HELLO!</p>
+            <p>BEST PLACES TO NAP</p>
           </div>
         </section>
         <section class="hero-container">
-          <div class="hero"></div>
-          <div class="icon icon8"></div>
+          <div class="hero" alt="image of a fox"></div>
         </section>
     </section>
 
