fix responsive add arrow buttons and dots

--- a/index.html
+++ b/index.html
@@ -50,6 +50,13 @@
         </section>
         <section class="hero-container">
           <div class="hero" alt="image of a fox"></div>
+          <div class="right-arrow"></div>
+          <div class="left-arrow"></div>
+            <section class="dots">
+              <div class="dot1"></div>
+              <div class="dot2"></div>
+              <div class="dot2"></div>
+            </section>
         </section>
     </section>
 
