--- a/index.html
+++ b/index.html
@@ -11,13 +11,17 @@
       <section class="body-container">
         <section class="boxes-container">
           <div class="box div1">
-              <h1 class="title">MR. FOX</h1>
-              <p class="bio" >Just fox trottin' through life like it ain't no thang.
-              Here's a little about me!</p>
-              <div class="button-container">
-                <button class="about"><img class="info" src="assets/info.svg" alt="">ABOUT</button>
-                <button><img class="contact" src="assets/contact.svg" alt="">CONTACT</button>
-              </div>
+            <h1 class="title">MR. FOX</h1>
+            <p class="bio" >Just fox trottin' through life like it ain't no thang.
+            Here's a little about me!</p>
+            <div class="button-container">
+              <button class="about">
+                <img class="info" src="assets/info.svg" alt="">ABOUT
+              </button>
+              <button>
+                <img class="contact" src="assets/contact.svg" alt="">CONTACT
+              </button>
+            </div>
           </div>
           <div class="box div2">
             <div class="icon icon1"></div>
@@ -58,8 +62,6 @@
               <div class="dot2"></div>
             </section>
         </section>
-    </section>
-
+      </section>
     </body>
-
 </html>
